# flex-crispr-probe-designer

./: .gitignore  CLAUDE.md  README.md  pyproject.toml
examples/: sample_guide_library.csv  sample_sheet.csv
src/flex_crispr_probe_designer/: __init__.py  cli.py  constants.py  models.py
src/flex_crispr_probe_designer/design/: cryptic_exon_sequences.py  cryptic_exons.py  dna.py  probes.py
src/flex_crispr_probe_designer/export/: cellranger.py  multiconfig.py  ordering.py  spikein.py
src/flex_crispr_probe_designer/plan/: experiment.py
src/flex_crispr_probe_designer/validate/: guides.py
tests/: conftest.py  test_cryptic_exon_sequences.py  test_cryptic_exons.py  test_dna.py  test_export.py  test_integration_k562.py  test_multiconfig.py  test_plan.py  test_probes.py  test_validate.py
