[project]
name = "flex-crispr-probe-designer"
version = "0.1.0"
description = "CRISPR guide capture probe designer for 10X Genomics Flex v2"
readme = "README.md"
authors = [
    { name = "Scott Handley", email = "handley.scott@gmail.com" }
]
requires-python = ">=3.12"
dependencies = [
    "pydantic>=2.0",
    "typer>=0.9",
    "rich>=13.0",
    "pandas>=2.0",
]

[project.scripts]
flex-crispr = "flex_crispr_probe_designer.cli:app"

[build-system]
requires = ["uv_build>=0.10.10,<0.11.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "ruff",
    "pyright",
    "pytest",
    "pandas-stubs>=3.0.0.260204",
]

[tool.ruff]
line-length = 120
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[tool.pyright]
pythonVersion = "3.12"
typeCheckingMode = "strict"
venvPath = "."
venv = ".venv"

[tool.pytest.ini_options]
testpaths = ["tests"]
